RESOLVED FIXED48470
[chromium] WebGL does not work with the compositor in test_shell
https://bugs.webkit.org/show_bug.cgi?id=48470
Summary [chromium] WebGL does not work with the compositor in test_shell
Kenneth Russell
Reported 2010-10-27 14:41:20 PDT
Marshall Greenblatt pointed out on chromium-dev that if test_shell is run with --enable-accelerated-compositing --enable-webgl, pages containing WebGL content do not render correctly. This is a likely regression (or failure to verify this functionality) from https://bugs.webkit.org/show_bug.cgi?id=46849 . This may also be causing layout test failures with DumpRenderTree in new-run-webkit-tests' --platform chromium-gpu configuration.
Attachments
Patch (2.13 KB, patch)
2010-10-27 14:46 PDT, Kenneth Russell
dglazkov: review+
kbr: commit-queue-
Kenneth Russell
Comment 1 2010-10-27 14:46:14 PDT
Kenneth Russell
Comment 2 2010-10-27 14:53:19 PDT
Note You need to log in before you can comment on or make changes to this bug.