WebKit/chromium/src/WebGraphicsContext3DDefaultImpl.cpp
@@ -219,12 +219,10 @@ void WebGraphicsContext3DDefaultImpl::validateAttributes()
 void WebGraphicsContext3DDefaultImpl::resolveMultisampledFramebuffer(unsigned x, unsigned y, unsigned width, unsigned height)
 {
     if (m_attributes.antialias) {
-        bool mustRestoreFBO = (m_boundFBO != m_multisampleFBO);
         glBindFramebufferEXT(GL_READ_FRAMEBUFFER_EXT, m_multisampleFBO);
         glBindFramebufferEXT(GL_DRAW_FRAMEBUFFER_EXT, m_fbo);
         glBlitFramebufferEXT(x, y, x + width, y + height, x, y, x + width, y + height, GL_COLOR_BUFFER_BIT, GL_LINEAR);
-        if (mustRestoreFBO)
-            glBindFramebufferEXT(GL_FRAMEBUFFER_EXT, m_boundFBO);
+        glBindFramebufferEXT(GL_FRAMEBUFFER_EXT, m_boundFBO);
     }
 }
 
@@ -288,6 +286,7 @@ void WebGraphicsContext3DDefaultImpl::prepareTexture()
 {
     if (!m_renderDirectlyToWebView) {
         // We need to prepare our rendering results for the compositor.
+        makeContextCurrent();
         resolveMultisampledFramebuffer(0, 0, m_cachedWidth, m_cachedHeight);
     }
 }
